--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ Android/G3MAndroidSDK/bin/
 Android/G3MAndroidSDK/gen/
 Android/G3MAndroidDemo/bin/
 Android/G3MAndroidDemo/gen/
+
+Android/G3MAndroidPlanarViewerDemo/bin/
+Android/G3MAndroidPlanarViewerDemo/gen/
+
 # Android/G3MAndroidSDK/bin/jarlist.cache
 # Android/G3MAndroidDemo/bin/jarlist.cache
 # Android/G3MAndroidDemo/bin/res/*/*
