--- a/Android/G3MAndroidDemo/AndroidManifest.xml
+++ b/Android/G3MAndroidDemo/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PlanarViewerActivity"
+            android:label="@string/title_activity_planar_viewer_webview" >
+        </activity>
     </application>
 
 </manifest>
